# file-guardian

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  requirements.md
.build-service/: config.toml
config/: config.toml
config/rules.d/: example.rules
scripts/: bump-version.mjs  release.mjs
src/: lib.rs
src/config/: mod.rs
src/logging/: mod.rs
src/rules/: mod.rs
src/scanner/: mod.rs
