[package]
name = "file-guardian"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["kevin <kevin@example.com>"]
description = "Scans directories for disallowed files based on configurable rules and policies."

[[bin]]
name = "file-guardian"
path = "src/bin/file-guardian.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal"] }
glob = "0.3"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
